--- a/src/Views/Controls/FileListControl.xaml
+++ b/src/Views/Controls/FileListControl.xaml
@@ -93,13 +93,12 @@
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <StackPanel Orientation="Horizontal">
-                                    <!-- 아이콘 -->
+                                    <!-- 아이콘: 시스템에서 추출한 실제 파일 아이콘 바인딩 -->
                                     <Image Width="16"
                                            Height="16"
                                            Margin="0,2,8,0"
-                                           Source="{StaticResource FileIcon}" />
-                                    <TextBlock TextTrimming="CharacterEllipsis"
-                                               Text="{Binding DisplayBaseName}" />
+                                           Source="{Binding Icon}" />
+                                    <TextBlock TextTrimming="CharacterEllipsis" Text="{Binding DisplayBaseName}" />
                                 </StackPanel>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
