--- a/src/Resources/Languages/Lang.ko-KR.xaml
+++ b/src/Resources/Languages/Lang.ko-KR.xaml
@@ -5,6 +5,7 @@
     <!-- 리스트 -->
     <sys:String x:Key="List_Index">번호</sys:String>
     <sys:String x:Key="List_Name">이름</sys:String>
+    <sys:String x:Key="List_Extension">확장자</sys:String>
     <sys:String x:Key="List_Preview">미리보기</sys:String>
     <sys:String x:Key="List_Size">크기</sys:String>
     <sys:String x:Key="List_Path">경로</sys:String>
@@ -34,12 +35,10 @@
 
     <!-- 사이드바 : 옵션 -->
     <sys:String x:Key="Option_ManualEdit">개별 변경 모드</sys:String>
-    <sys:String x:Key="Option_ShowExt">확장자 표시</sys:String>
     <sys:String x:Key="Option_ConfirmDeletion">삭제 확인 표시</sys:String>
     <!-- 옵션 : 툴팁 -->
     <sys:String x:Key="Tip_ManualEdit" xml:space="preserve">파일을 더블 클릭하면 이름 개별 수정이 가능합니다.
 규칙 변경 시 수정 사항은 초기화됩니다.</sys:String>
-    <sys:String x:Key="Tip_ShowExt">확장자 표시를 ON/OFF 합니다.</sys:String>
     <sys:String x:Key="Tip_ConfirmDeletion">파일 삭제 확인 창을 ON/OFF 합니다.</sys:String>
 
     <!-- 스낵바 -->
