Feat: File List IsVirtualizing, recycling

--- a/src/Views/Controls/FileListControl.xaml
+++ b/src/Views/Controls/FileListControl.xaml
@@ -62,6 +62,8 @@
                   PreviewDragOver="FileListView_PreviewDragOver"
                   PreviewMouseLeftButtonDown="FileListView_PreviewMouseLeftButtonDown"
                   PreviewMouseLeftButtonUp="FileListView_PreviewMouseLeftButtonUp"
+                  VirtualizingPanel.IsVirtualizing="True"
+                  VirtualizingPanel.VirtualizationMode="Recycling"
                   MouseMove="FileListView_MouseMove">
             <ListView.View>
                 <!-- GridView -->
