--- a/src/Resources/Languages/Lang.ko-KR.xaml
+++ b/src/Resources/Languages/Lang.ko-KR.xaml
@@ -41,6 +41,7 @@
 규칙 변경 시 수정 사항은 초기화됩니다.</sys:String>
     <sys:String x:Key="Tip_ConfirmDeletion">파일 삭제 확인 창을 ON/OFF 합니다.</sys:String>
     <sys:String x:Key="Tip_MismatchOnly">확장자와 포맷 시그니처가 다른 파일만 필터링합니다.</sys:String>
+    <sys:String x:Key="Tip_FilteredNoReorder">필터링 중에는 순서 변경 및 재정렬이 불가능합니다.</sys:String>
 
     <!-- 스낵바 -->
     <sys:String x:Key="Msg_AddFile">{0}개를 추가합니다.</sys:String>
