--- a/src/Views/Controls/SidebarControl.xaml
+++ b/src/Views/Controls/SidebarControl.xaml
@@ -70,6 +70,8 @@
                                      Margin="0,0,0,4"/>
                     <Button Content="{DynamicResource Btn_ReorderIndex}"
                             Command="{Binding ReorderNumberCommand}"
+                            ToolTip="{DynamicResource Tip_FilteredNoReorder}"
+                            ToolTipService.ShowOnDisabled="True"
                             Style="{StaticResource SidebarButtonStyle}" />
                 </StackPanel>
 
